# gxhash

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  changelog.jinja  gxhash.pyi  package.json  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: benchmark.yml  build.yml  clippy.yml  codspeed.yml  formatter.yml  lint.yml  lock.yml  main.yml  performance.yml  pre-commit.yml  publish.yml  pypi.yml  python.yml  release.yml  typecheck.yml
bench/: .clang-format  Cargo.toml  README.md  pyproject.toml
bench/src/: __init__.py  compat.c  compat.pyi  lib.rs  main.rs  routine.c  routine.pyi  routine.pyx
bench/typings/: cityhash.pyi  farmhash.pyi  metrohash.pyi  siphash24.pyi  stringzilla.pyi
benches/: gxhash_benchmark.rs  regression.rs
gxhash/: __init__.pyi  hashlib.pyi
perf/: Cargo.toml  hash.rs  hashlib.rs  helpers.rs  regression.rs  workload.rs
python/gxhash/: __init__.py  __init__.pyi  buffer.pyi  core.pyi  gxhash.pyi  gxhashlib.pyi  hashlib.pyi
python/gxhash/hashlib/: __init__.py  algorithms.py  algorithms.pyi
src/: buffer.rs  core.rs  hashlib.rs  lib.rs
tests/: Cargo.toml  helpers.rs  main.rs  smoke_test.py  test_core.rs  test_default.rs  test_hashlib.rs  test_smoke.py  tests.rs
tests/helpers/: mod.rs
