[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[package]
name = "gxhash-py"
description = "Python bindings for GxHash"
version = "0.3.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/winstxnhdw/gxhash"
repository = "https://github.com/winstxnhdw/gxhash"
documentation = "https://github.com/winstxnhdw/gxhash/README.md"

[lib]
name = "gxhash"
crate-type = ["cdylib", "rlib"]

[features]
hybrid = ["gxhash-core/hybrid"]

[dependencies.pyo3]
version = "0.27.2"
default-features = false
features = ["macros", "experimental-async"]

[dependencies.gxhash-core]
package = "gxhash"
version = "3.5.0"
default-features = false

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["rt-multi-thread"]

[build-dependencies.pyo3-build-config]
version = "0.27.2"
default-features = false
features = ["resolve-config"]

[dev-dependencies]
quickcheck = "=1.0.3"
quickcheck_macros = "=1.1.0"
