[project]
name = "gxhash"
description = "Python bindings for GxHash"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]
keywords = ["hash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/winstxnhdw/gxhash"
Documentation = "https://github.com/winstxnhdw/gxhash"
Repository = "https://github.com/winstxnhdw/gxhash"
Issues = "https://github.com/winstxnhdw/gxhash/issues"

[dependency-groups]
dev = ["commitizen>=3.31.0", "maturin>=1.11.5", "prek>=0.2.30", "pyright>=1.1.408", "ruff>=0.14.13"]

[build-system]
requires = ["maturin>=1.11.5, <2.0.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
locked = true
strip = true
features = ["pyo3/extension-module"]
exclude = [
    "tests/**",
    "benchmark/**/*",
    ".github/**/*",
    "**/.gitignore",
    "**/.pre-commit-config.yaml",
    "**/uv.lock",
    "**/rustfmt.toml",
    "**/Makefile",
    "**/changelog.jinja",
    "**/CHANGELOG.md",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PYI001", "PYI021", "A002", "COM812", "D", "TC003", "INP001"]

[tool.pyright]
exclude = [".venv", "bench"]
typeCheckingMode = "strict"

[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "cargo"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
template = "changelog.jinja"
major_version_zero = true

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}"
example = "feat(parser): add support for arrays"
schema = "<type>(<scope>): <subject>"
schema_pattern = "^(feat|fix|refactor|perf|build)(\\(.+\\))?: .+"
commit_parser = "^(?P<change_type>feat|fix|refactor|perf|build)(\\((?P<scope>[^)]+)\\))?: (?P<message>.*)$"
change_type_map = { feat = "Added", fix = "Fixed", refactor = "Changed", perf = "Changed", build = "Changed" }
change_type_order = ["Added", "Fixed", "Changed"]
changelog_pattern = "^(?P<change_type>feat|fix|refactor|perf|build)(\\((?P<scope>[^)]+)\\))?: (?P<message>.*)$"
