[project]
name = "gxhash"
description = "Python bindings for GxHash"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]
keywords = ["hash"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/winstxnhdw/gxhash"
Documentation = "https://github.com/winstxnhdw/gxhash"
Repository = "https://github.com/winstxnhdw/gxhash"
Issues = "https://github.com/winstxnhdw/gxhash/issues"

[dependency-groups]
dev = [
  "commitizen>=3.31.0",
  "maturin>=1.12.0",
  "nodejs-wheel-binaries>=24.13.1",
  "prek>=0.3.3",
  "pyright>=1.1.408",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-doctestplus>=1.3.0",
  "ruff>=0.15.1",
  "taplo>=0.9.3",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.12.0, <2.0.0"]

[tool.maturin]
python-source = "python"
profile = "release"
locked = true
strip = true
features = ["pyo3/extension-module"]
exclude = [
  "perf/**/*",
  "tests/**/*",
  "benchmark/**/*",
  "**/*.jinja",
  "**/*.yaml",
  "**/.github/**/*",
  "**/.gitignore",
  "**/uv.lock",
  "**/rustfmt.toml",
  "**/Makefile",
  "**/CHANGELOG.md",
  "**/CONTRIBUTING.md",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle (all docstring rules)
  "COM812", # missing-trailing-comma (conflict with ruff format)
  "A004",   # import-shadowing-builtin
  "PYI001", # unprefixed-type-param
  "PYI021", # docstring-in-stub
  "INP001", # implicit-namespace-package
  "TC003",  # typing-only-standard-library-import
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingModuleSource = false
reportPrivateUsage = false
stubPath = "./python"
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "**/.venv",
  "bench",
  "**/gxhash-*",
]

[tool.pytest.ini_options]
testpaths = ["python", "tests"]
filterwarnings = ["ignore::UserWarning:pytest_doctestplus"]
asyncio_mode = "auto"
addopts = """
    --doctest-plus
    --doctest-glob='*.pyi'
    --import-mode=importlib
    --ignore=python/gxhash/buffer.pyi
"""

[tool.commitizen]
name = "cz_customize"
changelog_file = "CHANGELOG.md"
template = "changelog.jinja"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "cargo"
bump_message = "chore(release): release $new_version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true

[tool.commitizen.customize]
example = "feat(parser): add support for arrays"
schema = "<type>(<scope>): <subject>"
schema_pattern = "^(feat|fix|refactor|perf|build|ci|chore|docs|internal|test)(/\\w+)?(\\(.+\\))?: .+"
commit_parser = "^\\w*/?(?P<change_type>feat|fix|refactor|perf|build)(/?\\w*)?(\\((?P<scope>[^)]+)\\))?: (?P<message>[^\\n]*)"
change_type_map = { feat = "Added", fix = "Fixed", refactor = "Changed", perf = "Changed", build = "Changed" }
change_type_order = ["Added", "Fixed", "Changed"]
changelog_pattern = "^\\w*/?(?P<change_type>feat|fix|refactor|perf|build)(/?\\w*)?(\\((?P<scope>[^)]+)\\))?: (?P<message>[^\\n]*)"
