[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[lib]
name = "compat"
crate-type = ["cdylib"]

[[bin]]
name = "benchmark"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
poloto = { version = "19.1.2", default-features = false }
tagu = { version = "0.1.6", default-features = false }

[dependencies.pyo3]
version = "0.28.2"
default-features = false
features = ["macros", "extension-module"]

[dependencies.polars]
version = "0.53.0"
default-features = false
features = ["lazy", "parquet", "nightly", "cse", "fmt", "log"]

[build-dependencies.pyo3-build-config]
version = "0.28.2"
default-features = false
features = ["resolve-config"]
