[project]
name = "bench"
version = "0.1.0"
description = "Benchmark suite for GxHash"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cityhash>=0.4.10",
    "gxhash",
    "metrohash>=0.4.1",
    "mmh3>=5.2.0",
    "polars>=1.38.0",
    "xxhash>=3.6.0",
]

[project.scripts]
bench = "src:main"

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.1"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[tool.uv.sources]
gxhash = { path = "../" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TC003", "COM812"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
stubPath = "./typings"
