[project]
name = "bench"
version = "0.0.0"
description = "Benchmark suite for GxHash"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
  "cityhash>=0.4.10",
  "gxhash",
  "metrohash>=0.4.1",
  "mmh3>=5.2.1",
  "polars>=1.39.0",
  "stringzilla>=4.6.0",
  "xxhash>=3.6.0",
]

[project.scripts]
bench = "src:main"

[dependency-groups]
dev = ["nodejs-wheel-binaries>=24.14.0", "pyright>=1.1.408", "ruff>=0.15.6"]

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[tool.uv.sources]
gxhash = { path = "../" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",      # pydocstyle (all docstring rules)
  "COM812", # missing-trailing-comma (conflict with ruff format)
  "TC003",  # typing-only-standard-library-import
]

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.pyright]
stubPath = "./typings"
typeCheckingMode = "strict"
reportUnknownMemberType = false
