bench = [
  { name = "hash", harness = false, path = "hash.rs" },
  { name = "hashlib", harness = false, path = "hashlib.rs" },
  { name = "workload", harness = false, path = "workload.rs" },
]

[package]
name = "gxhash-perf"
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"

[dependencies]
gxhash = { path = "..", package = "gxhash-py" }
pyo3 = { version = "0.28.3", default-features = false, features = ["macros"] }

[dev-dependencies]
divan = { version = "=4.4.1", package = "codspeed-divan-compat" }
