test = [{ name = "main", harness = true, path = "main.rs" }]

[package]
name = "gxhash-tests"
edition = "2024"

[dependencies]
gxhash = { path = "..", package = "gxhash-py" }
pyo3 = { version = "0.28.2", default-features = false, features = ["macros"] }

[dev-dependencies]
quickcheck = "=1.1.0"
quickcheck_macros = "=1.2.0"
